Added authentication using passport to protect routes
