# app/Http/Controllers/Controller.php
@@ -3,6 +3,7 @@
 namespace App\Http\Controllers;
 
 use Illuminate\Foundation\Auth\Access\AuthorizesRequests;
+use Illuminate\Foundation\Bus\DispatchesJobs;
 use Illuminate\Foundation\Validation\ValidatesRequests;
 use Illuminate\Routing\Controller as BaseController;
 
@@ -15,10 +16,17 @@ use Illuminate\Routing\Controller as BaseController;
 *       name="API Support",
 *       email = "tommycontreras34@gmail.com",
 *   ),
+* ),
+* @OA\SecurityScheme(
+*   securityScheme="token",
+*   type="http",
+*   name="Authorization",
+*   in="header",
+*   scheme="Bearer"
 * )
 */
 
 class Controller extends BaseController
 {
-    use AuthorizesRequests, ValidatesRequests;
+    use AuthorizesRequests, DispatchesJobs, ValidatesRequests;
 }
