# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\AuthController;
 use App\Http\Controllers\UserController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
@@ -15,9 +16,9 @@ use Illuminate\Support\Facades\Route;
 |
 */
 
-Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
-    return $request->user();
+Route::post('/auth/login', [AuthController::class, 'login'])->name('login');
+
+Route::group(['middleware' => 'auth:api', 'verified'], function() {    
+    //User
+    Route::get('/users', [UserController::class, 'index']);
 });
-
-
-Route::apiResource('users', UserController::class);
